# homeassistant-trinity

./: CHANGELOG.md  README.md  hacs.json  pyproject.toml  release-please-config.json
.github/workflows/: lint.yml
custom_components/trinity/: __init__.py  config_flow.py  const.py  coordinator.py  manifest.json  media_player.py  services.yaml  strings.json
esphome/: trinity-matrix.yaml
